crates/monochange/tests/snapshots/cli_output__change_cli_help_documents_package_and_group_targeting_rules@change_cli_help_documents_package_and_group_targeting_rules.snap
---
source: crates/monochange/tests/cli_output.rs
assertion_line: 184
info:
  program: mc
  args:
    - change
    - "--help"
  env:
    NO_COLOR: "1"
    RUST_LOG: ""
---
success: true
exit_code: 0
----- stdout -----
Create a change file for one or more packages

Usage: mc change [--dry-run] [--interactive] [--package <PACKAGE>] [--bump <BUMP>] [--version <VERSION>] [--reason <REASON>] [--type <TYPE>] [--caused-by <CAUSED_BY>] [--details <DETAILS>] [--output <PATH>]

Options:
      --dry-run                   Run the command in dry-run mode when supported
  -i, --interactive               Select packages, bumps, and options interactively
  -q, --quiet                     Suppress stdout/stderr output and run in dry-run mode when supported
      --package <PACKAGE>         Package or group to include in the change
      --progress-format <FORMAT>  Control progress output on stderr [possible values: auto, unicode, ascii, json]
      --bump <BUMP>               Requested semantic version bump [default: patch] [possible values: none, patch, minor, major]
      --jq <EXPRESSION>           Filter JSON output with a jq-style expression, such as `.assets[].name`
      --version <VERSION>         Pin an explicit version for this release
      --reason <REASON>           Short release-note summary for this change
      --type <TYPE>               Optional release-note type such as `security` or `note` [possible values: security, test]
      --caused-by <CAUSED_BY>     Package or group ids that caused this dependent change
      --details <DETAILS>         Optional multi-line release-note details
      --output <PATH>             Write the generated change file to a specific path
  -h, --help                      Print help

Examples:
  mc change --package sdk-core --bump patch --reason "fix panic"
  mc change --package sdk-core --bump minor --reason "add API" --output .changeset/sdk-core.md
  mc change --package sdk --bump minor --reason "coordinated release"
  mc change --package sdk-config --bump none --caused-by sdk-core --reason "dependency-only follow-up"

Rules:
  - Prefer configured package ids in change files whenever a leaf package changed.
  - Use a group id only when the change is intentionally owned by the whole group.
  - Dependents and grouped members are propagated automatically during planning.
  - Use `--caused-by` when a package is only changing because another package or group moved first.
  - Legacy manifest paths may still resolve during migration, but declared ids are the stable interface.


----- stderr -----
