crates/monochange/tests/snapshots/cli_output__change_file@change_cli_writes_explicit_versions_when_requested.snap
---
source: crates/monochange/tests/cli_output.rs
assertion_line: 105
expression: change_file
---
---
core:
  bump: major
  version: "2.0.0"
---

# promote to stable
