crates/monochange/tests/snapshots/cli_output__change_file@change_cli_writes_requested_file_contents.snap
---
source: crates/monochange/tests/cli_output.rs
assertion_line: 75
expression: change_file
---
---
core: minor
---

# document cli snapshots
