crates/monochange/tests/snapshots/cli_output__manifest@prepare_release_writes_manifest_json.snap
---
source: crates/monochange/tests/cli_output.rs
assertion_line: 492
expression: manifest
---
{
  "command": "release",
  "dryRun": true,
  "version": "1.1.0",
  "groupVersion": "1.1.0",
  "releaseTargets": [
    {
      "id": "sdk",
      "kind": "group",
      "version": "1.1.0",
      "tag": true,
      "release": true,
      "versionFormat": "primary",
      "tagName": "v1.1.0",
      "members": [
        "core",
        "app"
      ],
      "renderedTitle": "1.1.0 ([DATE])",
      "renderedChangelogTitle": "1.1.0 ([DATE])"
    }
  ],
  "releasedPackages": [
    "workflow-app",
    "workflow-core"
  ],
  "changedFiles": [
    "Cargo.toml",
    "changelog.md",
    "crates/app/Cargo.toml",
    "crates/core/CHANGELOG.md",
    "crates/core/Cargo.toml",
    "group.toml"
  ],
  "changelogs": [
    {
      "ownerId": "sdk",
      "ownerKind": "group",
      "path": "changelog.md",
      "format": "monochange",
      "notes": {
        "title": "1.1.0 ([DATE])",
        "summary": [
          "Grouped release for `sdk`."
        ],
        "sections": [
          {
            "title": "Minor",
            "collapsed": false,
            "entries": [
              "> [!NOTE]\n> *core*\n\n#### add feature"
            ]
          }
        ]
      },
      "rendered": "## 1.1.0 ([DATE])\n\nGrouped release for `sdk`.\n\n### Minor\n\n> [!NOTE]\n> *core*\n\n#### add feature"
    },
    {
      "ownerId": "core",
      "ownerKind": "package",
      "path": "crates/core/CHANGELOG.md",
      "format": "monochange",
      "notes": {
        "title": "1.1.0 ([DATE])",
        "summary": [],
        "sections": [
          {
            "title": "Minor",
            "collapsed": false,
            "entries": [
              "#### add feature"
            ]
          }
        ]
      },
      "rendered": "## 1.1.0 ([DATE])\n\n### Minor\n\n#### add feature"
    }
  ],
  "packagePublications": [
    {
      "package": "app",
      "ecosystem": "cargo",
      "registry": "crates_io",
      "version": "1.1.0",
      "mode": "builtin",
      "trustedPublishing": {
        "enabled": true,
        "repository": null,
        "workflow": null,
        "environment": null
      }
    },
    {
      "package": "core",
      "ecosystem": "cargo",
      "registry": "crates_io",
      "version": "1.1.0",
      "mode": "builtin",
      "trustedPublishing": {
        "enabled": true,
        "repository": null,
        "workflow": null,
        "environment": null
      }
    }
  ],
  "changesets": [
    {
      "path": ".changeset/feature.md",
      "summary": "add feature",
      "details": null,
      "targets": [
        {
          "id": "core",
          "kind": "package",
          "bump": "minor",
          "origin": "direct-change",
          "evidenceRefs": [],
          "changeType": "minor"
        }
      ],
      "context": {
        "provider": "generic_git",
        "host": null,
        "capabilities": {
          "commitWebUrls": false,
          "actorProfiles": false,
          "reviewRequestLookup": false,
          "relatedIssues": false,
          "issueComments": false
        },
        "introduced": null,
        "lastUpdated": null,
        "relatedIssues": []
      }
    }
  ],
  "deletedChangesets": [],
  "plan": {
    "workspaceRoot": ".",
    "decisions": [
      {
        "package": "cargo:crates/app/Cargo.toml",
        "bump": "minor",
        "trigger": "version-group-synchronization",
        "plannedVersion": "1.1.0",
        "reasons": [
          "depends on `cargo:crates/core/Cargo.toml`",
          "shares version group `sdk`"
        ],
        "upstreamSources": [
          "cargo:crates/core/Cargo.toml"
        ]
      },
      {
        "package": "cargo:crates/core/Cargo.toml",
        "bump": "minor",
        "trigger": "direct-change",
        "plannedVersion": "1.1.0",
        "reasons": [
          "add feature",
          "shares version group `sdk`"
        ],
        "upstreamSources": [
          "cargo:crates/core/Cargo.toml"
        ]
      }
    ],
    "groups": [
      {
        "id": "sdk",
        "plannedVersion": "1.1.0",
        "members": [
          "cargo:crates/core/Cargo.toml",
          "cargo:crates/app/Cargo.toml"
        ],
        "bump": "minor"
      }
    ],
    "warnings": [],
    "unresolvedItems": [],
    "compatibilityEvidence": []
  }
}
